Fix alignment of trade chat timer.

--- a/extension/scripts/features/search-chat/ttSearchChat.css
+++ b/extension/scripts/features/search-chat/ttSearchChat.css
@@ -15,6 +15,10 @@
 	margin-bottom: 2px;
 }
 
+[class*="chat-box_"][class*="trade_"][class*="chat-active_"] .tt-chat-filter {
+	width: calc(100% - 30px);
+}
+
 .tt-chat-filter input {
 	margin-left: 4px;
 	margin-right: 4px;
