--- a/extension/scripts/features/trade-timer/ttTradeTimer.css
+++ b/extension/scripts/features/trade-timer/ttTradeTimer.css
@@ -4,7 +4,7 @@
 	height: 16px;
 	line-height: 15px;
 	padding: 2px 2px 0 2px;
-	margin: 0 3px;
+	margin-bottom: -18px;
 	color: white;
 	text-align: center;
 	border-radius: 5px;
